[package]
name = "gtk-future-executor"
version = "0.1.0"
authors = ["Dmitry Kalyanov <Kalyanov.Dmitry@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "basic building blocks for writing async GUI code with Gtk-rs"
repository = "https://github.com/dmitryvk/gtk-future-executor.git"

[dependencies]
futures = "0.1.27"
glib = "0.7.1"
gtk = "0.6.0"

[dev-dependencies]
futures-cpupool = "0.1.8"